--- a/a2.html
+++ b/a2.html
@@ -5,6 +5,9 @@
 <p>
 this is something I just typed!!!
 </p>
+<p>
+    Adding some more stuff now!
+    </p>
 <svg width ="100" height="100">
 <circle cx = "50" cy = "50" r = "40" stroke = "green" stroke-width = "4" fill = "yellow" />
 </svg>
