--- a/a2.html
+++ b/a2.html
@@ -6,7 +6,7 @@
 this is something I just typed!!!
 </p>
 <p>
-   this is now empty
+   this is for testing
     </p>
 <svg width ="100" height="100">
 <circle cx = "50" cy = "50" r = "40" stroke = "green" stroke-width = "4" fill = "yellow" />
