--- a/a1.html
+++ b/a1.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h1>This is my wonderful HDML page!</h1>
+    <h1>This is my wonderful HDML page!(A1)</h1>
     <p> This is my first web page I have ever written myself. I have previously gone through the entirety of the
         w3schools tutorial in my own time but this is the first time I am putting what I know to use. I am a little
         rusty so this should be some pretty good practice.</p>
@@ -19,7 +19,9 @@
     </p>
     <h1>Attribution</h1>
     <p>
-        <a href = "https://www.w3schools.com/html/default.asp">w3schools for HTML refresher</a>
+        This assignment was completed with the help of the course notes and videos, <a
+            href="https://www.w3schools.com/html/default.asp">tutorials from w3schools</a>, and <a
+            href="https://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.63763&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false">playground.tensorflow.org</a>.
     </p>
 </body>
 
